# UDPListenerFor1C

./: README.md
VNCOMPS/VNCOMP83/lib/1CEAdnWebNPAPISafOSX.bundle/Contents/: Info.plist
VNCOMPS/VNCOMP83/lib/1CEAdnWebNPAPISafOSX.bundle/Contents/MacOS/: 1CEAdnWebNPAPISafOSX
VNCOMPS/VNCOMP83/template/: AddInNative.cpp  AddInNative.h  AddInNative.vcxproj  CMakeLists.txt  CMakePresets.json  ChangeHistory.txt  Finduchardet.cmake  UdpServer.cpp  UdpServer.h
